// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageCaption snapshots should render caption with text (Black T-shirt) and letter (A) when given this as property 1`] = `
<div
  className="captionContainer"
>
  <div
    className="captionContent"
  >
    <span
      className=""
      data-testid="captionLetter"
    >
      A
    </span>
    <div
      className="captionDivider"
      data-testid="captionDivider"
    />
    <span>
      Black T-shirt
    </span>
  </div>
</div>
`;

exports[`imageCaption snapshots should render caption without letter and divider when not given this as a property 1`] = `
<div
  className="captionContainer"
>
  <div
    className="captionContent"
  >
    <span
      className=" hidden "
      data-testid="captionLetter"
    />
    <div
      className="captionDivider hidden "
      data-testid="captionDivider"
    />
    <span>
      Black T-shirt
    </span>
  </div>
</div>
`;
